--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "backend",
   "version": "0.0.1",
+  "engines": {
+    "node": "8.9.1",
+    "npm": "6.5.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
